--- a/src/app/global_comman/login/login.component.html
+++ b/src/app/global_comman/login/login.component.html
@@ -67,7 +67,7 @@
 
             <div>
                 <input type="submit" value="Login" class="btn btn-submit">
-                <!-- <input type="submit" value="Sign Up" class="btn btn-submit" (click)="signup()"> -->
+                <input type="submit" value="Sign Up" class="btn btn-submit" (click)="signup()">
             </div>
 
             <!-- <input type="submit"
