--- a/src/app/global_comman/home/home.component.css
+++ b/src/app/global_comman/home/home.component.css
@@ -39,8 +39,8 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 110%;
-    height: 70%; 
+    width: 100%;
+    height: auto; 
     display: flex;
     /* width: 100%;
     height:100%; */
