--- a/src/app/global_comman/sidenav/sidenav.component.html
+++ b/src/app/global_comman/sidenav/sidenav.component.html
@@ -14,6 +14,12 @@
                     </a>
                 </li>
 
+                <li class="itm col-12">
+                    <a routerLink="/view-tutorials" class="nav-link">
+                        <i class="fas fa-user icon-profile" style="color: #070707;"></i><span class="ittxt">Tutorials</span>
+                    </a>
+                </li>
+
                 <!-- <li class="nav-item itm col-12 align-self-end">
                     <a routerLink="/login" class="lnk nav-link  px-0 text-truncate">
                         
