--- a/src/app/global_comman/header/header.component.html
+++ b/src/app/global_comman/header/header.component.html
@@ -32,7 +32,7 @@
   
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/">YoungMind</a> 
+      <a class="navbar-brand" routerLink="/home">YoungMind</a> 
       
       <!-- Comment out or remove the navbar-toggler button -->
       <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,9 +66,6 @@
               </li>
               <li class="nav-item" routerLink="/login" *ngIf=" !isLoggedIn()">
                 <a class="nav-link">Login</a>
-              </li>
-              <li class="nav-item" routerLink="/hometest">
-                <a class="nav-link">hometest</a>
               </li>
           </ul>
       </div>
