--- a/src/app/module1_exam_prep/game1_tutorials/tutorial-submission/tutorial-submission.component.html
+++ b/src/app/module1_exam_prep/game1_tutorials/tutorial-submission/tutorial-submission.component.html
@@ -1,4 +1,4 @@
-<div class="p1dv1 col-11">
+<!-- <div class="p1dv1 col-11">
 
 
 
@@ -23,7 +23,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col-md-6 col-12 form-group" >
+            <div class="col-md-6 col-12 form-group" > -->
 
                 <!-- <label>Completion Date</label>
                 <input type="date"  id="dateDone"  (change)="onDateChange($event)"  formControlName="dateDone"   class="form-control" placeholder="eg : 1996-03-18"
@@ -31,7 +31,7 @@
                 <div *ngIf="submitted && f['dateDone'].errors" class="invalid-feedback">
                         <div *ngIf="f['dateDone'].errors['dateDone']">completion date is required</div>
                 </div> -->
-            </div>
+            <!-- </div>
 
             <div class="row form-group mt-2">
                 <div class="col-md-6 col-12 form-group">
@@ -47,7 +47,7 @@
                     <div *ngIf="submitted && f['dateDone'].errors" class="invalid-feedback">
                       <div *ngIf="f['dateDone'].errors['required']">Completion date is required</div>
                     </div>
-                  </div>
+                  </div> -->
 
 
                 <!--
@@ -65,7 +65,7 @@
                       </div>
                 </div> -->
 
-                <div class="col-md-6 col-12 form-group">
+                <!-- <div class="col-md-6 col-12 form-group">
                     <label>Complete Percentage</label>
                     <select
                       id="compltePercentage"
@@ -116,4 +116,74 @@
       </div>
 
 
-</div>
+</div> -->
+
+
+
+<!-- <div class="background"> -->
+  <div class="tutorial-box">
+      <h1>Log New Tutorial</h1>
+      <form [formGroup]="tutorialForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+              <label for="tutorialName">Tutorial Name:</label>
+              <input
+                  type="text"
+                  id="tutorialName"
+                  formControlName="tutorialName"
+                  class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f['tutorialName'].errors }"
+              />
+              <div *ngIf="submitted && f['tutorialName'].errors" class="invalid-feedback">
+                  <div *ngIf="f['tutorialName'].errors['required']">Tutorial Name is required</div>
+              </div>
+          </div>
+
+          <div class="form-group">
+              <label for="date">Date:</label>
+              <input
+                  type="date"
+                  id="date"
+                  formControlName="date"
+                  class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f['date'].errors }"
+              />
+              <div *ngIf="submitted && f['date'].errors" class="invalid-feedback">
+                  <div *ngIf="f['date'].errors['required']">Date is required</div>
+              </div>
+          </div>
+
+          <div class="form-group input-group">
+            <label for="progress">Progress</label>
+            <select
+              formControlName="progress"
+              class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f['progress'].errors }"
+            >
+              <option value="" disabled>Select progress</option>
+              <option *ngFor="let option of progressOptions" [value]="option">{{ option }}</option>
+            </select>
+            <div *ngIf="submitted && f['progress'].errors" class="invalid-feedback">
+              <div *ngIf="f['progress'].errors['required']">Progress is required</div>
+            </div>
+          </div>
+
+          <div class="form-group">
+              <label for="description">Description:</label>
+              <textarea
+                  id="description"
+                  formControlName="description"
+                  rows="4"
+                  class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f['description'].errors }"
+              ></textarea>
+              <div *ngIf="submitted && f['description'].errors" class="invalid-feedback">
+                  <div *ngIf="f['description'].errors['required']">Description is required</div>
+              </div>
+          </div>
+
+          <div class="form-group">
+              <button type="submit" class="btn-submit">Submit</button>
+          </div>
+      </form>
+  </div>
+<!-- </div> -->
