--- a/src/app/module1_exam_prep/game1_tutorials/view-tutorials/view-tutorials.component.css
+++ b/src/app/module1_exam_prep/game1_tutorials/view-tutorials/view-tutorials.component.css
@@ -1,4 +1,4 @@
-.task-container {
+/* .task-container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
@@ -51,4 +51,208 @@
     font-size: 14px;
     color: #555;
     margin-bottom: 4px;
+  } */
+
+  :host ::ng-deep .background {
+    background-image: linear-gradient(
+      rgba(255, 255, 255, 0.3), /* Semi-transparent white */
+      rgba(255, 255, 255, 0.76)
+    ), url('/assets/background04.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100%;
+    height: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+  
+  .container {
+    /* background-color: #f0e4d7;  */
+    padding: 20px;
+    font-family: 'MedievalSharp', sans-serif; 
+  }
+  
+  h1 {
+    color: #c89f5f; /* Gold color */
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 20px;
+  }
+  
+  .add-button {
+    background-color: #cc4211; /* Turquoise */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1.2em;
+    margin: 10px 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .records-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
+  
+  .record-card {
+    background-color: #fff;
+    border: 2px solid #c89f5f; /* Gold border */
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    padding: 15px;
+    text-align: center;
+    font-size: 1em;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+  }
+  
+  .record-card:hover {
+    transform: translateY(-10px);
+  }
+
+  .record-image {
+    width: 100%;
+    /* height: 150px;  */
+    overflow: hidden;
+    border-radius: 10px 10px 0 0; /* Rounded corners on top */
+  }
+  
+  .record-image img {
+    width: 60%;
+    height: auto;
+    object-fit: cover; /* Ensure image covers the area */
+  }
+  
+  .record-header h2 {
+    margin: 0;
+    color: #007a7a; /* Turquoise */
+  }
+  
+  .record-header p {
+    margin: 5px 0;
+    color: #666;
+  }
+  
+  .record-body p {
+    margin: 10px 0;
+  }
+  
+  .progress-bar {
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    height: 10px;
+    width: 100%;
+    margin: 10px 0;
+  }
+  
+  .progress {
+    background-color: #ffc107; /* Turquoise */
+    height: 100%;
+    border-radius: 5px;
+  }
+  
+  .record-footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: auto; /* Pushes footer to the bottom */
+  }
+  
+  /* .view-btn, .edit-btn {
+    background-color: #37984e;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 15px;
+    cursor: pointer;
+    font-size: 0.9em;
+    flex: 1; 
+    margin: 5px;
+  } */
+  
+  /* .edit-btn {
+    background-color: #c27d2a; 
+  } */
+  
+  .view-btn:hover, .edit-btn:hover {
+    opacity: 0.8;
+  }
+  
+/* Modal background */
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  z-index: 1000; /* Ensure it appears above other content */
+  /* visibility: hidden;  */
+  /* opacity: 0;  */
+  /* transition: opacity 0.3s ease, visibility 0.3s ease; */
+}
+
+/* Modal when visible */
+.modal.show { 
+  visibility: visible;
+   /* opacity: 1;  */
+} 
+
+.modal-content-add {
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 5px;
+  width: 80%;
+  max-width: 600px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.modal-content-view {
+  /* background-image: url('/assets/brick_background.jpg'); */
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 15px;
+  width: 80%;
+  max-width: 1000px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.edit-btn {
+  background-color: #c27d2a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 15px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.edit-btn:hover {
+  opacity: 0.8;
+}
+
