--- a/src/app/global_comman/home/home.component.html
+++ b/src/app/global_comman/home/home.component.html
@@ -1,39 +1,3 @@
-<!-- <div class="p1dv1 col-8" > -->
-
-    <!-- <div class="row">
-        <div class="col-3 ">
-        </div>
-        <div class="col-6 ">
-            <h1 class="hmPgTtl" >University Students Mental Wellbeing</h1>
-        </div>
-        <div class="col-1"  >
-        </div>
-    </div> -->
-
-    <!-- <div class="img mt-4">
-        <div class="row">
-            <div >
-                <img src="/assets/map2.png" class="imgcus1" alt="Responsive image">
-            </div>
-
-        </div>
-        
-         -->
-    <!-- </div> -->
-    <!-- <div>
-      <br> 
-      <br>  
-      <br> 
-      <br>  
-      <p>
-        <b>We are here to keep your mental well being doing good . </b>
-         - YM Team
-        </p>
-    </div>     -->
-<!-- </div> -->
-
-
-
 <div class="background">
     <div class="home-container">
       <div class="game-scroll" *ngFor="let game of games">
@@ -52,49 +16,26 @@
     <img id="narrator" class="narrator-image" src="/assets/narrator.png" alt="Egyptian God">
     <div class="dialog-box">
       <p>How are you feeling today?</p>
-      <!-- <div class="mood-options">
-        <label>
-          <input type="radio" name="mood" value="happy">
-          😊 Happy
-        </label>
-        <label>
-          <input type="radio" name="mood" value="sad">
-          😢 Sad
-        </label>
-        <label>
-          <input type="radio" name="mood" value="neutral">
-          😐 Neutral
-        </label>
-        <label>
-          <input type="radio" name="mood" value="excited">
-          😄 Excited
-        </label>
-        <label>
-          <input type="radio" name="mood" value="angry">
-          😠 Angry
-        </label>
-      </div> -->
-  
       <div class="mood-options">
         <label>
           <input type="radio" name="mood" value="angry">
-          <img src="assets/angry.jpg" alt="Angry">
+          <img src="assets/moods/angry.jpg" alt="Angry">
         </label>
         <label>
           <input type="radio" name="mood" value="sad">
-          <img src="assets/sad.jpg" alt="Sad">
+          <img src="assets/moods/sad.jpg" alt="Sad">
         </label>
         <label>
           <input type="radio" name="mood" value="neutral">
-          <img src="assets/neutral.jpg" alt="Neutral">
+          <img src="assets/moods/neutral.jpg" alt="Neutral">
         </label>
         <label>
           <input type="radio" name="mood" value="happy">
-          <img src="assets/happy.jpg" alt="Happy">
+          <img src="assets/moods/happy.jpg" alt="Happy">
         </label>
         <label>
           <input type="radio" name="mood" value="excited">
-          <img src="assets/excited.jpg" alt="Excited">
+          <img src="assets/moods/excited.jpg" alt="Excited">
         </label>
       </div>
       <button id="submit-mood">Submit</button>
