--- a/src/app/global_comman/login/login.component.html
+++ b/src/app/global_comman/login/login.component.html
@@ -67,8 +67,8 @@
 
             <div>
                 <input type="submit" value="Login" class="btn btn-submit">
-                <h6>OR</h6>
-                <input type="submit" value="Sign Up" class="btn btn-submit" (click)="signup()">
+                <!-- <h6>OR</h6> -->
+                <!-- <input type="submit" value="Sign Up" class="btn btn-submit" (click)="signup()"> -->
             </div>
 
             <!-- <input type="submit"
