--- a/src/app/global_comman/signup/signup.component.css
+++ b/src/app/global_comman/signup/signup.component.css
@@ -1,5 +1,5 @@
 :host ::ng-deep .background {
-  background-image: url('/assets/background01.jpg');
+  background-image: url('/assets/background-img/background01.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -18,6 +18,7 @@
   width: 800px; /* Adjust width to be larger */
   max-width: 100%; /* Ensure the box does not exceed the viewport width */
   box-sizing: border-box; /* Include padding and border in element's total width and height */
+  font-family: 'MedievalSharp', sans-serif;
 }
 
 .signup-box h1 {
